fixing some spacing issues in the Work section on desktop

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,15 +1,18 @@
 // Footer styles
 
 footer {
+    @include flexBox();
     color: white;
     font-size: 1.3rem;
     background: $accentColour1;
 
-    .fa-smile {
-        color: white;
+    p {
+        width: 100%;
+        text-align: center;
     }
 
-    .wrapper {
-        @include flexBox();
+    .fa-smile {
+        color: white;
+        display: inline-block;
     }
 }
