--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -18,7 +18,7 @@ footer {
 }
 
 section {
-    padding: 30px 0;
+    padding: 30px 0 60px 0;
 }
 
 .wrapper {
