--- a/styles/partials/_work.scss
+++ b/styles/partials/_work.scss
@@ -20,7 +20,6 @@ h3 {
 }
 
 .wave2 {
-    // display: none;
     width: 130px;
     position: absolute;
     top: -65px;
@@ -32,10 +31,10 @@ h3 {
     width: 100%;
     border-bottom: 4px dotted $accentColour1;
     padding: 30px 0;
+}
 
-    &:first-child {
-        margin-bottom: 20px;
-    }
+.project4 {
+    border-bottom: none;
 }
 
 .projLinks {
@@ -61,10 +60,6 @@ h3 {
             background: $accentColour1;
             border: 2px solid $accentColour1;
         }
-
-        // &:visited {
-        //     color: $accentColour1;
-        // }
     }
 }
 
@@ -83,3 +78,6 @@ h3 {
     margin-bottom: 10px;
 }
 
+.captions {
+    margin-top: 30px;
+}
